--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ select {
 }
 #newsfeed .feedBox {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   row-gap: 10px;
 }
 #newsfeed .feedBox .postItem {
@@ -256,6 +256,49 @@ select {
   display: flex;
   column-gap: 10px;
   position: relative;
+}
+#newsfeed .feedBox .postItem .top ul{
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  z-index: 1;
+  transition: .4s;
+  -webkit-transition: .4s;
+  -moz-transition: .4s;
+  -ms-transition: .4s;
+  -o-transition: .4s;
+}
+#newsfeed .feedBox .postItem .top ul li:first-child{
+  margin-top: 10px;
+}
+#newsfeed .feedBox .postItem .top ul li{
+  padding: 5px 0;
+  color: #65686c;
+}
+#newsfeed .feedBox .postItem .top ul li:hover{
+  cursor: pointer;
+}
+#newsfeed .feedBox .postItem .top ul .ActionHide{
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0;
+}
+#newsfeed .feedBox .postItem .top ul .ActionHide button{
+  height: 30px;
+  width: 40px;
+  font-size: 20px;
+  border: none;
+  border-bottom-left-radius: 10px;
+}
+#newsfeed .feedBox .postItem .top ul li i{
+  width: 30px;
 }
 #newsfeed .feedBox .postItem .top .profile {
   width: 40px;
@@ -284,6 +327,9 @@ select {
   background-color: transparent;
   font-size: 22px;
 }
+#newsfeed .feedBox .postItem .top .postInfoMore:hover{
+  cursor: pointer;
+}
 #newsfeed .feedBox .postItem .posted {
   padding: 10px 0;
 }
@@ -306,6 +352,9 @@ select {
   width: 100px;
   height: 30px;
   align-items: center;
+}
+#newsfeed .feedBox .postItem .reaction .actions .item:hover{
+  cursor: pointer;
 }
 #newsfeed .feedBox .postItem .reaction .actions .like.liked {
     color: #0e7be0;
